message and dark mode fixes

--- a/frontend/global.css
+++ b/frontend/global.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 :root {
-    color: #121212;
+    color: #555555;
 }
